[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/status_effects/GroundedStatus.gd" type="Script" id=1]
[ext_resource path="res://assets/particles/meteor_burst_particle.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/burning_bar_background.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/grounded_bar_full.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.875, 18.2558 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.0468, 31.8198 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 15, 20, 1 )
flag_disable_z = true
gravity = Vector3( 0, 20, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.8

[node name="GroundedStatus" type="Area2D" groups=["Grounded"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -8.73846 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )
disabled = true

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="GroundedBar" type="TextureProgress" parent="."]
visible = false
margin_left = -36.054
margin_top = 55.0
margin_right = -18.054
margin_bottom = 61.0
rect_scale = Vector2( 4, 3 )
max_value = 1000.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( 0.11028, -8.34331 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DecayDelayTimer" type="Timer" parent="."]

[node name="GroundedParticles" type="Particles2D" parent="."]
scale = Vector2( 2.5, 2.5 )
emitting = false
amount = 6
lifetime = 0.65
explosiveness = 0.25
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_GroundedStatus_area_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
